--- a/css/styles.css
+++ b/css/styles.css
@@ -40,3 +40,16 @@ body {
     color: white;
     font-size: 25px;
 }
+
+.submitButtonCart {
+    background-color: darkturquoise;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
