--- a/css/styles.css
+++ b/css/styles.css
@@ -102,3 +102,16 @@ body {
     margin: 30px;
     font-family: 'Trebuchet MS', Helvetica, sans-serif
 }
+th {
+    text-align: left;
+}
+
+td {
+    height: 20px;
+    vertical-align: bottom;
+  }
+
+  th, td {
+    padding: 15px;
+    text-align: left;
+  }
